fix styling for projects on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -9,5 +9,6 @@ main {
   box-sizing: border-box;
   font-family: 'Montserrat', sans-serif;
   display: flex;
+  background-color: #6a51300f;
 }
 
