--- a/src/Components/Stack/Stack.module.css
+++ b/src/Components/Stack/Stack.module.css
@@ -18,7 +18,7 @@
   transform: translateX(-50%);
   width: 100vw; 
   height: 100%;
-  background-color: #f0f0f0; 
+  background-color: #a09e9ecf; 
   z-index: -1;
 }
 
